Fixed bug #77263 (Segfault when using 2 RecursiveFilterIterator)